grammar.ebnf
expression = logic_or;

logic_or = logic_and ( "or" logic_and )*;

logic_and = equality ( "and" equality )*;

equality = comparison ( ( "==" | "!=" ) comparison )*;

comparison = addition ( ( ">" | ">=" | "<" | "<=" ) addition )*;

addition = multiplication ( ("-" | "+") multiplication )*;

multiplication = unary ( ("/" | "*") unary )*;

unary = ("-" | "!") unary | call;

call  → primary ( "(" arguments? ")" )* ;

arguments → expression ( "," expression )* ;

primary = INTEGER | FLOAT | STRING | "true" | "false" | "(" expression ")" | IDENTIFIER;
